--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.example.bottomsheetdialogexample.ui.CountAnimationTextView
+        android:id="@+id/text_count_animation"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        tools:text="20000"
+        android:textSize="50sp"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
